# duct-gallery

./: .gitignore  CLAUDE.md  README.md  con-duct-gallery.yaml  pyproject.toml  pytest.ini
.claude/: settings.local.json
.github/workflows/: daily-update.yml  pr-preview.yml
.specify/memory/: constitution.md
logs/asmacdo-gallery-example-1/: example_output_info.json  example_output_stdout  example_output_usage.json
logs/asmacdo-gallery-example-2/: example_output_info.json  example_output_stdout  example_output_usage.json
logs/mriqc-processing-on-a-single-subjectsession/: example_output_info.json  example_output_stderr  example_output_stdout  example_output_usage.json
specs/001-a-want-a/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-a-want-a/contracts/: cli-interface.md  markdown-output.md  yaml-schema.md
src/con_duct_gallery/: __init__.py  __main__.py  cli.py  fetcher.py  generator.py  models.py  plotter.py
tests/integration/: test_end_to_end.py  test_error_handling.py
tests/unit/: test_cli.py  test_fetcher.py  test_generator.py  test_models.py  test_plotter.py
